MacViews: Fix DCHECK in CaptivePortalBrowserTest.GoBack

Allow BrowserCompositorMac to transition between different parent UI
layers, if needed.

Bug: 853302
Change-Id: I85596a1fe42c490d770f023c68d9a4093f050dcc
Reviewed-on: https://chromium-review.googlesource.com/1107047
Reviewed-by: Robert Liao <robliao@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568716}
Former-commit-id: acd68e8c00229ff395a8a4852a1cf3aa0d5f9f77